controller, swagger fixes
