# main.go
@@ -1,7 +1,12 @@
 package main
 
 import (
+	"flag"
+	"fmt"
+
 	"github.com/gin-gonic/gin"
+	"github.com/jinzhu/gorm"
+	_ "github.com/jinzhu/gorm/dialects/postgres"
 
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
@@ -9,6 +14,7 @@ import (
 	_ "github.com/pashukhin/indriver-test-task/docs" // docs is generated by Swag CLI, you have to import it.
 
 	"github.com/pashukhin/indriver-test-task/controller"
+	"github.com/pashukhin/indriver-test-task/model"
 )
 
 // @title inDriver test task
@@ -21,17 +27,30 @@ import (
 // @host localhost:8080
 // @BasePath /
 func main() {
+	httpAddr, dbHost, dbPort, dbUser, dbPassword, dbDatabase := params()
+	dsn := fmt.Sprintf("host=%s port=%d user=%s password=%s dbname=%s sslmode=disable", *dbHost, *dbPort, *dbUser, *dbPassword, *dbDatabase)
+	db, err := gorm.Open("postgres", dsn)
+	if err != nil {
+		fmt.Println("error: ", err)
+		return
+	}
+	defer db.Close()
+	db.LogMode(true)
+
+	db.AutoMigrate(&model.CarModel{})
+
 	r := gin.Default()
 
-	swaggerURL := ginSwagger.URL("http://localhost:8080/swagger/doc.json")
+	swaggerURL := ginSwagger.URL(fmt.Sprintf("http://%s/swagger/doc.json", *httpAddr))
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, swaggerURL))
 
-	carModelController := &controller.CarModel{}
+	//carModelRepository := repository.NewCarModelRepository(db)
+	carModelController := controller.NewCarModelController(db)
 	carModelGroup := r.Group("/car_model")
 	{
 		carModelGroup.GET("/", carModelController.List)
-		carModelGroup.GET("/:id", carModelController.Get)
 		carModelGroup.POST("/", carModelController.Create)
+		carModelGroup.GET("/:id", carModelController.Get)
 		carModelGroup.PUT("/:id", carModelController.Update)
 		carModelGroup.DELETE("/:id", carModelController.Delete)
 	}
@@ -41,5 +60,17 @@ func main() {
 			"message": "pong",
 		})
 	})
-	r.Run() // listen and serve on 0.0.0.0:8080 (for windows "localhost:8080")
+	//r.Run(*httpAddr)
+	r.Run()
+}
+
+func params() (*string, *string, *int, *string, *string, *string) {
+	httpAddr := flag.String("http.addr", "loaclhost:8080", "HTTP listen address")
+	dbHost := flag.String("db.host", "db", "db host")
+	dbPort := flag.Int("db.port", 5432, "db port")
+	dbUser := flag.String("db.user", "user", "db user")
+	dbPassword := flag.String("db.password", "password", "db password")
+	dbDatabase := flag.String("db.database", "db", "database name")
+	flag.Parse()
+	return httpAddr, dbHost, dbPort, dbUser, dbPassword, dbDatabase
 }
